# modbus-mqtt-bridge

./: .dockerignore  .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml
.github/workflows/: docker.yml  pages.yml  release.yml  test.yml
config/: config.yml
docs/: architecture.md  concepts.md  configuration.md  deployment.md  docker.md  getting-started.md  index.html  index.md  operations.md  package-lock.json  package.json  recipes.md  styles.css  topic-contract.md  troubleshooting.md
docs/.vitepress/: config.mjs  config.mts
src/: bridge.rs  config.rs  lib.rs  main.rs  modbus_codec.rs
tests/: integration_config_codec.rs
